• no background animation on mobile version due performance issues • fixed hero subtitle width on mobile

--- a/web/app/themes/swiftfest/partials/partial-hero/partial-hero.scss
+++ b/web/app/themes/swiftfest/partials/partial-hero/partial-hero.scss
@@ -14,7 +14,6 @@
       // small
       @media screen and (max-width: 39.938em) {
         margin-bottom: 20px;
-        @include super_width(160px);
       }
 		}
     .hero_title_container_desktop {
